<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobileappdev.myapplication.MainActivity">

    <GridLayout
        android:id="@+id/game_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="false"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_margin="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </GridLayout>

    <Button
        android:id="@+id/new_game_button"
        style="@style/GameOptionButton"
        android:onClick="onNewGameClick"
        android:text="@string/new_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_grid" />

    <Button
        android:id="@+id/cheat_button"
        style="@style/GameOptionButton"
        android:onClick="onCheatClick"
        android:text="@string/cheat_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Custom_Game" />

    <Button
        android:id="@+id/Custom_Game"
        style="@style/GameOptionButton"
        android:text="@string/custom_game"
        android:onClick="onCustomClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/High_Score" />

    <Button
        android:id="@+id/help_button"
        style="@style/GameOptionButton"
        android:onClick="onHelpClick"
        android:text="@string/help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_game_button" />

    <Button
        android:id="@+id/High_Score"
        style="@style/GameOptionButton"
        android:onClick="onHighClick"
        android:text="@string/high_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_button" />

</androidx.constraintlayout.widget.ConstraintLayout>