<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobileappdev.myapplication.CustomActivity"
    android:background="@color/teal">

    <TextView
        android:id="@+id/CustomPrompt1"
        android:textSize="30sp"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="@color/white"
        android:text="@string/customp1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <SeekBar
        android:id="@+id/seekBarID"
        android:max="100"
        android:progress="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:thumbTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/CustomPrompt1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/CustomWarning"
        android:textSize="30sp"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/custom_warning"
        app:layout_constraintTop_toBottomOf="@id/seekBarID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/apply_button"
        android:layout_margin="25dp"
        style="@style/GameOptionButton"
        android:onClick="onCustomApplyClick"
        android:text="@string/apply_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/default_button"
        android:layout_margin="25dp"
        style="@style/GameOptionButton"
        android:onClick="onDefaultClick"
        android:text="@string/default_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/apply_button" />

</androidx.constraintlayout.widget.ConstraintLayout>